@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2018 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
+ * Copyright (c) 2019 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Creative Commons Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)
  * which accompanies this distribution, and is available at http://creativecommons.org/licenses/by-nd/4.0/
@@ -32,9 +32,9 @@ public class ContentNegotiator {
 		Calendar date = null;
 
 		try {
-			date = DataManager.getImplProv().getApprovalServiceProvider().newInstance()
+			date = DataManager.getImplProv().getApprovalServiceProvider().getDeclaredConstructor().newInstance()
 					.getPublicReferenceByInternalId(internalId).getCreationDate();
-		} catch (InstantiationException | IllegalAccessException | EdalException e) {
+		} catch (EdalException | RuntimeException | ReflectiveOperationException e) {
 			throw new EdalException("unable to initialize ApprovalServiceProvider: " + e.getMessage(), e);
 		}
 
