@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2018 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
+ * Copyright (c) 2019 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Creative Commons Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)
  * which accompanies this distribution, and is available at http://creativecommons.org/licenses/by-nd/4.0/
@@ -1177,8 +1177,8 @@ public class ApprovalServiceProviderImplementation implements ApprovalServicePro
 							ServiceProvider service = null;
 
 							try {
-								service = DataManager.getImplProv().getServiceProvider().newInstance();
-							} catch (InstantiationException | IllegalAccessException e) {
+								service = DataManager.getImplProv().getServiceProvider().getDeclaredConstructor().newInstance();
+							} catch (ReflectiveOperationException e) {
 								DataManager.getImplProv().getLogger().error(e);
 								throw new EdalApprovalException(
 										"Unable to load ApprovalServiceProvider: " + e.getMessage(), e.getCause());
@@ -1231,8 +1231,8 @@ public class ApprovalServiceProviderImplementation implements ApprovalServicePro
 				ServiceProvider service = null;
 
 				try {
-					service = DataManager.getImplProv().getServiceProvider().newInstance();
-				} catch (InstantiationException | IllegalAccessException e) {
+					service = DataManager.getImplProv().getServiceProvider().getDeclaredConstructor().newInstance();
+				} catch (ReflectiveOperationException e) {
 					DataManager.getImplProv().getLogger().error(e);
 					throw new EdalApprovalException("Unable to load ApprovalServiceProvider: " + e.getMessage(),
 							e.getCause());
