@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2018 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
+ * Copyright (c) 2019 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Creative Commons Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)
  * which accompanies this distribution, and is available at http://creativecommons.org/licenses/by-nd/4.0/
@@ -37,7 +37,7 @@ public class RebuildIndexJob implements Job {
 
 		try {
 			ServiceProvider s = ((FileSystemImplementationProvider) DataManager.getImplProv()).getServiceProvider()
-					.newInstance();
+					.getDeclaredConstructor().newInstance();
 
 			if (s.isCleaned()) {
 
@@ -45,7 +45,7 @@ public class RebuildIndexJob implements Job {
 
 				s.setCleaned(false);
 			}
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (ReflectiveOperationException e) {
 			e.printStackTrace();
 		}
 
