@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2018 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
+ * Copyright (c) 2019 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Creative Commons Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)
  * which accompanies this distribution, and is available at http://creativecommons.org/licenses/by-nd/4.0/
@@ -44,8 +44,8 @@ public class CheckReviewStatusJob implements Job {
 		ApprovalServiceProvider app = null;
 
 		try {
-			app = DataManager.getImplProv().getApprovalServiceProvider().newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
+			app = DataManager.getImplProv().getApprovalServiceProvider().getDeclaredConstructor().newInstance();
+		} catch (ReflectiveOperationException e) {
 			DataManager.getImplProv().getLogger().error(e);
 			throw new JobExecutionException("Unable to load ApprovalServiceProvider: " + e.getMessage(), e.getCause());
 		}
