@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2018 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
+ * Copyright (c) 2019 Leibniz Institute of Plant Genetics and Crop Plant Research (IPK), Gatersleben, Germany.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Creative Commons Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)
  * which accompanies this distribution, and is available at http://creativecommons.org/licenses/by-nd/4.0/
@@ -107,9 +107,9 @@ public class DataCiteReference implements Referenceable {
 					}
 
 					try {
-						DataManager.getImplProv().getApprovalServiceProvider().newInstance()
+						DataManager.getImplProv().getApprovalServiceProvider().getDeclaredConstructor().newInstance()
 								.storePersistentID(publicReference, doi, year);
-					} catch (InstantiationException | IllegalAccessException e) {
+					} catch (ReflectiveOperationException e) {
 						throw new EdalApprovalException("unable to store a new DOI for the PublicReference");
 					}
 
@@ -134,9 +134,9 @@ public class DataCiteReference implements Referenceable {
 					System.out.println(dataCiteXml);
 
 					try {
-						DataManager.getImplProv().getApprovalServiceProvider().newInstance()
+						DataManager.getImplProv().getApprovalServiceProvider().getDeclaredConstructor().newInstance()
 								.storePersistentID(publicReference, testDoi, year);
-					} catch (InstantiationException | IllegalAccessException e) {
+					} catch (ReflectiveOperationException e) {
 						throw new ReferenceableException("unable to store a new DOI for the PublicReference");
 					}
 
